tests/rosetta/transpiler/OCaml/eban-numbers.error
exit status 2
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/eban-numbers.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: "Eban-numbers" is not a valid module name.
File "/workspace/mochi/tests/rosetta/transpiler/OCaml/eban-numbers.ml", line 134, characters 25-34:
134 |     with Continue -> ()) (!ranges) with Break -> ());
                               ^^^^^^^^^
Error: This expression has type Obj.t list list
       but an expression was expected of type int list list
       Type Obj.t is not compatible with type int 
